# clox

./: .gitignore  CMakeLists.txt  README.md
include/: error.h  scanner.h  token.h
src/: error.cpp  main.cpp  scanner.cpp  token.cpp
